--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Welcome to my Pinterest App</h1>
-<p>Narly eh</p>
+<div class="jumbotron center">
+  <h1>Welcome to my Pinterest App</h1>
+  
+  <p>Narly eh</p>
+  
+  <%= link_to "Login", root_path, class: "btn btn-primary" %>
+  <%= link_to "Join", root_path, class: "btn btn-success" %>
+</div>
