--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <%= render 'home/header' %>
+
+    <div class="container">
     <%= yield %>
+    <div>
   </body>
 </html>
