Added the devise gem, creating a user interface

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,6 @@
   
   <p>Narly eh</p>
   
-  <%= link_to "Login", root_path, class: "btn btn-primary" %>
-  <%= link_to "Join", root_path, class: "btn btn-success" %>
+  <%= link_to "Login", new_user_session_url, class: "btn btn-primary" %>
+  <%= link_to "Join", new_user_registration_url, class: "btn btn-success" %>
 </div>
